--- a/main.html
+++ b/main.html
@@ -1,33 +1,35 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>History of Blogging</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <!-- Correct heading for the page title -->
     <h1>History</h1>
 
-    <!-- Bold text properly closed -->
-    <p><b>Main articles:</b> History of blogging and online diary</p>
-
-    <!-- First paragraph -->
+    <!-- Single paragraph for the "Main articles:" section and content -->
     <p>
+        <b>Main articles:</b> History of blogging and online diary.
         An early example of a "diary" style blog consisting of text and images transmitted wirelessly in real-time from a wearable computer with head-up display, February 22, 1995. 
         The term "weblog" was coined by Jorn Barger[13] on December 17, 1997. The short form, "blog", was coined by Peter Merholz, who jokingly broke the word weblog into the phrase 
-        we blog in the sidebar of his blog Peterme.com in April or May 1999. Shortly thereafter, Evan Williams at Pyra Labs used "blog" as both a noun and verb ("to blog", meaning 
-        "to edit one's weblog or to post to one's weblog") and devised the term "blogger" in connection with Pyra Labs Blogger product, leading to the popularization of the terms.[17]
+        "we blog" in the sidebar of his blog Peterme.com in April or May 1999.[14][15][16] Shortly thereafter, Evan Williams at Pyra Labs used "blog" as both a noun and verb ("to blog", meaning 
+        "to edit one's weblog or to post to one's weblog") and devised the term "blogger" in connection with Pyra Labs' Blogger product, leading to the popularization of the terms.[17]
     </p>
 
-    <!-- Image with alt text -->
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Eastcampusfire_glog_crop.png/220px-Eastcampusfire_glog_crop.png" alt="Early blogging example">
+    <!-- Image section (image will be placed later as needed) -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Eastcampusfire_glog_crop.png/220px-Eastcampusfire_glog_crop.png" 
+         alt="Early blogging example">
 
+    <!-- Correct heading for the 'Origins' section -->
     <h2>Origins</h2>
-
-    <!-- Second paragraph -->
+    
+    <!-- Single paragraph for the Origins content -->
     <p>
         Before blogging became popular, digital communities took many forms, including Usenet, commercial online services such as GEnie, Byte Information Exchange (BIX), and 
         the early CompuServe, e-mail lists,[18] and Bulletin Board Systems (BBS).
@@ -37,4 +39,3 @@
 </body>
 
 </html>
-
